[gd_scene load_steps=50 format=3 uid="uid://bcyx2fra78skm"]

[ext_resource type="Texture2D" uid="uid://ba5qpif73edxo" path="res://sprites/attacking_firemage.png" id="1_6d605"]
[ext_resource type="Script" uid="uid://csv37lryq0x14" path="res://scripts/firemage.gd" id="1_mjj2w"]
[ext_resource type="Texture2D" uid="uid://bgsnphgejpolv" path="res://images/white-light-mask.png" id="3_ef5xr"]
[ext_resource type="AudioStream" uid="uid://bxycicgbvhktl" path="res://sounds/you_shall_not_pass.mp3" id="3_jk868"]
[ext_resource type="AudioStream" uid="uid://c2dwxeblpplgs" path="res://sounds/evil_laugh_2.mp3" id="5_ef5xr"]
[ext_resource type="AudioStream" uid="uid://d06i71c6iu46p" path="res://sounds/firemage_hit.mp3" id="6_wt8nh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_k37jv"]
atlas = ExtResource("1_6d605")
region = Rect2(352, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjj2w"]
atlas = ExtResource("1_6d605")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_14iet"]
atlas = ExtResource("1_6d605")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jk868"]
atlas = ExtResource("1_6d605")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6d605"]
atlas = ExtResource("1_6d605")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef5xr"]
atlas = ExtResource("1_6d605")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wt8nh"]
atlas = ExtResource("1_6d605")
region = Rect2(80, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkpn5"]
atlas = ExtResource("1_6d605")
region = Rect2(96, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkf62"]
atlas = ExtResource("1_6d605")
region = Rect2(112, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1asdd"]
atlas = ExtResource("1_6d605")
region = Rect2(128, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_frkgq"]
atlas = ExtResource("1_6d605")
region = Rect2(144, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b430d"]
atlas = ExtResource("1_6d605")
region = Rect2(160, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dh4y8"]
atlas = ExtResource("1_6d605")
region = Rect2(176, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1s7i"]
atlas = ExtResource("1_6d605")
region = Rect2(192, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ea8j"]
atlas = ExtResource("1_6d605")
region = Rect2(208, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfsku"]
atlas = ExtResource("1_6d605")
region = Rect2(224, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pb6b"]
atlas = ExtResource("1_6d605")
region = Rect2(240, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_asy0k"]
atlas = ExtResource("1_6d605")
region = Rect2(256, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2voc"]
atlas = ExtResource("1_6d605")
region = Rect2(272, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yagsb"]
atlas = ExtResource("1_6d605")
region = Rect2(288, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uiefu"]
atlas = ExtResource("1_6d605")
region = Rect2(304, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdiaf"]
atlas = ExtResource("1_6d605")
region = Rect2(320, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0w1va"]
atlas = ExtResource("1_6d605")
region = Rect2(336, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8lum"]
atlas = ExtResource("1_6d605")
region = Rect2(352, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a56pk"]
atlas = ExtResource("1_6d605")
region = Rect2(368, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfro8"]
atlas = ExtResource("1_6d605")
region = Rect2(384, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgu6o"]
atlas = ExtResource("1_6d605")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6ypd"]
atlas = ExtResource("1_6d605")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnm65"]
atlas = ExtResource("1_6d605")
region = Rect2(80, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_shfhd"]
atlas = ExtResource("1_6d605")
region = Rect2(96, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jj6mi"]
atlas = ExtResource("1_6d605")
region = Rect2(112, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2r24w"]
atlas = ExtResource("1_6d605")
region = Rect2(128, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0p7mi"]
atlas = ExtResource("1_6d605")
region = Rect2(144, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0q47j"]
atlas = ExtResource("1_6d605")
region = Rect2(144, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8xua"]
atlas = ExtResource("1_6d605")
region = Rect2(128, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4l3oo"]
atlas = ExtResource("1_6d605")
region = Rect2(112, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4m2h"]
atlas = ExtResource("1_6d605")
region = Rect2(96, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oy0uu"]
atlas = ExtResource("1_6d605")
region = Rect2(80, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_el3ob"]
atlas = ExtResource("1_6d605")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5p8h"]
atlas = ExtResource("1_6d605")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_srww1"]
atlas = ExtResource("1_6d605")
region = Rect2(0, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ef5xr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k37jv")
}],
"loop": true,
"name": &"dying",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjj2w")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_14iet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jk868")
}],
"loop": true,
"name": &"normal",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6d605")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef5xr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wt8nh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkpn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkf62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1asdd")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_frkgq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b430d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dh4y8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1s7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ea8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfsku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pb6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asy0k")
}, {
"duration": 20.0,
"texture": SubResource("AtlasTexture_i2voc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yagsb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uiefu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdiaf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0w1va")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_w8lum")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a56pk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfro8")
}],
"loop": false,
"name": &"super",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgu6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6ypd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnm65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shfhd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jj6mi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2r24w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0p7mi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0q47j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8xua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4l3oo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4m2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oy0uu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_el3ob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5p8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srww1")
}],
"loop": false,
"name": &"teleport",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_wt8nh"]
radius = 3.0

[node name="Firemage" type="CharacterBody2D"]
z_index = 1
collision_layer = 4
collision_mask = 7
script = ExtResource("1_mjj2w")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -9)
sprite_frames = SubResource("SpriteFrames_ef5xr")
animation = &"normal"

[node name="PointLight2D" type="PointLight2D" parent="AnimatedSprite2D"]
position = Vector2(0, -4)
energy = 0.7
texture = ExtResource("3_ef5xr")
texture_scale = 0.3

[node name="you_shall_not_pass" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_jk868")

[node name="evil_laugh" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_ef5xr")

[node name="hit_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_wt8nh")
volume_db = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wt8nh")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="finished" from="you_shall_not_pass" to="." method="_on_you_shall_not_pass_finished"]
